Corrige dados mock para valores realistas (~2.600 protocolos) e remove backend

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dashboard-frontend",
+  "name": "dashboard-protocolos",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -11,9 +11,9 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0",
     "chart.js": "^4.4.0",
-    "react-chartjs-2": "^5.2.0",
-    "axios": "^1.6.2"
+    "react-chartjs-2": "^5.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
