--- a/netlify.toml
+++ b/netlify.toml
@@ -3,10 +3,19 @@
   publish = "dist"
 
 [[redirects]]
+  from = "/api-nextags/*"
+  to = "/.netlify/functions/proxy-api/:splat"
+  status = 200
+  force = true
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
 
 [build.environment]
   NODE_VERSION = "18"
+
+[functions]
+  directory = "netlify/functions"
 
