fix: corrige redirect do Netlify e extração do path na função proxy

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@
 # Redirect para API - DEVE VIR ANTES do redirect geral
 [[redirects]]
   from = "/api-nextags/*"
-  to = "/.netlify/functions/proxy-api"
+  to = "/.netlify/functions/proxy-api/:splat"
   status = 200
   force = true
 
